* test_summary: Additional to XPASS and FAIL, add UNRESOLVED, WARNING and ERROR output from the *.sum files.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50010 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-24  Christian Jönsson  <c.christian.joensson@telia.com>
+
+	* test_summary: Additional to XPASS and FAIL, add UNRESOLVED,
+	WARNING and ERROR output from the *.sum files.
+
 2002-01-26  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* gennews (files): Replace gcc-2.95/gcc-2.95.html,
