--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sun Feb 24 16:38:56 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* optabs.c (widen_operand): Properly handle CONST_INT for NO_EXTEND.
+
 2002-02-24  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cpplex.c (cpp_interpret_charconst): Get signedness or
