--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-24  Adam Megacz  <adam@xwt.org>
+
+	* java/lang/Win32Process.java: Created a dummy class to allow
+	build process to run to completion.
+
 2002-02-24  Jeff Sturm  <jsturm@one-point.com>
 
 	* java/lang/reflect/natMethod.cc (_Jv_CallAnyMethodA):
