--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -14008,13 +14008,32 @@
   [(set_attr "type" "altivec")
    (set_attr "length" "*,*,*,16,16,16")])
 
+(define_insn "get_vrsave_internal"
+  [(set (match_operand:SI 0 "register_operand" "=r")
+	(unspec:SI [(reg:SI 109)] 214))]
+  "TARGET_ALTIVEC"
+  "*
+{
+  if (TARGET_MACHO)
+     return \"mtspr 256,%0\";
+  else
+     return \"mtvrsave %0\";
+}"
+  [(set_attr "type" "altivec")])
+
 (define_insn "*set_vrsave_internal"
   [(match_parallel 0 "vrsave_operation"
      [(set (reg:SI 109)
 	   (unspec_volatile:SI [(match_operand:SI 1 "register_operand" "r")
 				(reg:SI 109)] 30))])]
   "TARGET_ALTIVEC"
-  "mtvrsave %1"
+  "*
+{
+  if (TARGET_MACHO)
+    return \"mfspr %1,256\";
+  else
+    return \"mtvrsave %1\";
+}"
   [(set_attr "type" "altivec")])
 
 ;; Vector clears
