--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-25  Aldy Hernandez  <aldyh@redhat.com>
+
+        * c-typeck.c (push_init_level): Handle vectors.
+
 2002-02-25  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/sparc/sparc.c (const64_high_operand): Zero-extend
