--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-25  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* Makefile.am (GCJCOMPILE): Use -fCLASSPATH not -fclasspath. Fixes
+	dependency tracking for .java files.
+	* Makefile.in: Rebuilt.
+
 2002-02-24  Adam Megacz  <adam@xwt.org>
 
 	* java/net/natPlainDatagramSocketImpl.cc: whops; removed 'make'
