--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-25  Alexandre Oliva  <aoliva@redhat.com>
+
+	* gcc.c (init_gcc_specs): Get -shared-libgcc along with -shared to
+	link with shared_name only.
+	* doc/invoke.texi (Link Options): Document new behavior.
+
 2002-02-25  Aldy Hernandez  <aldyh@redhat.com>
 
         * c-typeck.c (push_init_level): Handle vectors.
