--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-25  Jason Merrill  <jason@redhat.com>
+
+	* attribs.c (decl_attributes): Also re-layout PARM_DECL and
+	RESULT_DECL.
+
 2002-02-25  Alexandre Oliva  <aoliva@redhat.com>
 
 	* gcc.c (init_gcc_specs): Get -shared-libgcc along with -shared to
