--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-25  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20020224-1.c: New test.
+
 2002-02-25  Alan Modra  <amodra@bigpond.net.au>
 
 	* gcc.c-torture/execute/20020225-1.c: New.
