* gcc.c-torture/execute/960416-1.x: New. 	* gcc.c-torture/execute/divconst-3.x: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50029 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-25  Kazu Hirata  <kazu@hxi.com>
+
+	* gcc.c-torture/execute/960416-1.x: New.
+	* gcc.c-torture/execute/divconst-3.x: Likewise.
+
 2002-02-25  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/20020224-1.c: New test.
