--- a/gcc-3_1-branch/gcc/f/root.texi
+++ b/gcc-3_1-branch/gcc/f/root.texi
@@ -2,7 +2,7 @@
 @c as compared to a release version.  When making a release
 @c (e.g. a release branch in the CVS repository for gcc),
 @c clear this and set the version information correctly.
-@set DEVELOPMENT
+@clear DEVELOPMENT
 @set version-g77 0.5.27
 @set version-gcc 3.1
 
