2002-02-26  Aldy Hernandez  <aldyh@redhat.com>
        * config/rs6000/rs6000.md (get_vrsave_internal): Fix typo.
        ("*set_vrsave_internal"): Same.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50045 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -14015,9 +14015,9 @@
   "*
 {
   if (TARGET_MACHO)
-     return \"mtspr 256,%0\";
+     return \"mfspr %0,256\";
   else
-     return \"mtvrsave %0\";
+     return \"mfvrsave %0\";
 }"
   [(set_attr "type" "altivec")])
 
@@ -14030,7 +14030,7 @@
   "*
 {
   if (TARGET_MACHO)
-    return \"mfspr %1,256\";
+    return \"mtspr 256,%1\";
   else
     return \"mtvrsave %1\";
 }"
