--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-26  Aldy Hernandez  <aldyh@redhat.com>
+
+        * config/rs6000/rs6000.md (get_vrsave_internal): Fix typo.
+        ("*set_vrsave_internal"): Same.
+
 2002-02-25  Richard Henderson  <rth@redhat.com>
 
 	* expr.c (expand_expr) [MULT_EXPR]: Do not apply distributive law
