--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-02-26  Aldy Hernandez  <aldyh@redhat.com>
+
+        * dwarf2out.c (modified_type_die): Do not call type_main_variant
+        for vectors.
+        (gen_type_die): Same.
+
+        * attribs.c (handle_vector_size_attribute): Set debug information.
+
 2002-02-26  Daniel Egger  <degger@fhm.edu>
 
         * config/rs6000/rs6000.md: Swap define_insn attributes to
