* config/h8300/h8300-protos.h: Add a prototype for 	compute_logical_op_length. 	* config/h8300/h8300.c (compute_logical_op_length): New. 	* config/h8300/h8300.md (anonymous logical patterns): Use 	compute_logical_op_length for length.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50055 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -1039,7 +1039,8 @@
 		(match_operand:HI 2 "nonmemory_operand" "rn")))]
   "TARGET_H8300"
   "* return output_logical_op (HImode, AND, operands);"
-  [(set_attr "length" "4")
+  [(set (attr "length")
+	(symbol_ref "compute_logical_op_length (HImode, AND, operands)"))
    (set_attr "cc" "clobber")])
 
 (define_insn ""
@@ -1048,7 +1049,8 @@
 		(match_operand:HI 2 "nonmemory_operand" "r,n")))]
   "TARGET_H8300H || TARGET_H8300S"
   "* return output_logical_op (HImode, AND, operands);"
-  [(set_attr "length" "2,4")
+  [(set (attr "length")
+	(symbol_ref "compute_logical_op_length (HImode, AND, operands)"))
    (set_attr "cc" "set_znv,clobber")])
 
 (define_insn "*andorhi3"
@@ -1083,7 +1085,8 @@
 		(match_operand:SI 2 "nonmemory_operand" "rn")))]
   "TARGET_H8300"
   "* return output_logical_op (SImode, AND, operands);"
-  [(set_attr "length" "8")
+  [(set (attr "length")
+	(symbol_ref "compute_logical_op_length (SImode, AND, operands)"))
    (set_attr "cc" "clobber")])
 
 (define_insn ""
@@ -1092,7 +1095,8 @@
 		(match_operand:SI 2 "nonmemory_operand" "r,n")))]
   "TARGET_H8300H || TARGET_H8300S"
   "* return output_logical_op (SImode, AND, operands);"
-  [(set_attr "length" "4,6")
+  [(set (attr "length")
+	(symbol_ref "compute_logical_op_length (SImode, AND, operands)"))
    (set_attr "cc" "set_znv,clobber")])
 
 ;; ----------------------------------------------------------------------
@@ -1147,7 +1151,8 @@
 		(match_operand:HI 2 "general_operand" "J,rn")))]
   "TARGET_H8300"
   "* return output_logical_op (HImode, IOR, operands);"
-  [(set_attr "length" "2,4")
+  [(set (attr "length")
+	(symbol_ref "compute_logical_op_length (HImode, IOR, operands)"))
    (set_attr "cc" "clobber,clobber")])
 
 (define_insn ""
@@ -1156,7 +1161,8 @@
 		(match_operand:HI 2 "general_operand" "J,r,n")))]
   "TARGET_H8300H || TARGET_H8300S"
   "* return output_logical_op (HImode, IOR, operands);"
-  [(set_attr "length" "2,2,4")
+  [(set (attr "length")
+	(symbol_ref "compute_logical_op_length (HImode, IOR, operands)"))
    (set_attr "cc" "clobber,set_znv,clobber")])
 
 (define_expand "iorsi3"
@@ -1172,7 +1178,8 @@
 		(match_operand:SI 2 "nonmemory_operand" "J,rn")))]
   "TARGET_H8300"
   "* return output_logical_op (SImode, IOR, operands);"
-  [(set_attr "length" "2,8")
+  [(set (attr "length")
+	(symbol_ref "compute_logical_op_length (SImode, IOR, operands)"))
    (set_attr "cc" "clobber,clobber")])
 
 (define_insn ""
@@ -1181,7 +1188,8 @@
 		(match_operand:SI 2 "nonmemory_operand" "J,r,n")))]
   "TARGET_H8300H || TARGET_H8300S"
   "* return output_logical_op (SImode, IOR, operands);"
-  [(set_attr "length" "2,4,6")
+  [(set (attr "length")
+	(symbol_ref "compute_logical_op_length (SImode, IOR, operands)"))
    (set_attr "cc" "clobber,set_znv,clobber")])
 
 ;; ----------------------------------------------------------------------
@@ -1236,7 +1244,8 @@
 		(match_operand:HI 2 "nonmemory_operand" "J,rn")))]
   "TARGET_H8300"
   "* return output_logical_op (HImode, XOR, operands);"
-  [(set_attr "length" "2,4")
+  [(set (attr "length")
+	(symbol_ref "compute_logical_op_length (HImode, XOR, operands)"))
    (set_attr "cc" "clobber,clobber")])
 
 (define_insn ""
@@ -1245,7 +1254,8 @@
 		(match_operand:HI 2 "nonmemory_operand" "J,r,n")))]
   "TARGET_H8300H || TARGET_H8300S"
   "* return output_logical_op (HImode, XOR, operands);"
-  [(set_attr "length" "2,2,4")
+  [(set (attr "length")
+	(symbol_ref "compute_logical_op_length (HImode, XOR, operands)"))
    (set_attr "cc" "clobber,set_znv,clobber")])
 
 (define_expand "xorsi3"
@@ -1261,7 +1271,8 @@
 		(match_operand:SI 2 "nonmemory_operand" "J,rn")))]
   "TARGET_H8300"
   "* return output_logical_op (SImode, XOR, operands);"
-  [(set_attr "length" "2,8")
+  [(set (attr "length")
+	(symbol_ref "compute_logical_op_length (SImode, XOR, operands)"))
    (set_attr "cc" "clobber,clobber")])
 
 (define_insn ""
@@ -1270,7 +1281,8 @@
 		(match_operand:SI 2 "nonmemory_operand" "J,r,n")))]
   "TARGET_H8300H || TARGET_H8300S"
   "* return output_logical_op (SImode, XOR, operands);"
-  [(set_attr "length" "2,4,6")
+  [(set (attr "length")
+	(symbol_ref "compute_logical_op_length (SImode, XOR, operands)"))
    (set_attr "cc" "clobber,set_znv,clobber")])
 
 ;; ----------------------------------------------------------------------
