--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-02-26  Kazu Hirata  <kazu@hxi.com>
+
+	* config/h8300/h8300-protos.h: Add a prototype for
+	compute_logical_op_length.
+	* config/h8300/h8300.c (compute_logical_op_length): New.
+	* config/h8300/h8300.md (anonymous logical patterns): Use
+	compute_logical_op_length for length.
+
 2002-02-26  Aldy Hernandez  <aldyh@redhat.com>
 
         * dwarf2out.c (modified_type_die): Do not call type_main_variant
