PR debug/5770 	* dwarf2out.c (rtl_for_decl_location): Return CONST_STRING for 	STRING_CST initializer spanning the whole variable without 	embedded zeros. 	If expand_expr returned MEM, don't use it.
	* g++.dg/debug/debug4.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50058 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-02-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/5770
+	* dwarf2out.c (rtl_for_decl_location): Return CONST_STRING for
+	STRING_CST initializer spanning the whole variable without
+	embedded zeros.
+	If expand_expr returned MEM, don't use it.
+
 2002-02-26  Alexandre Oliva  <aoliva@redhat.com>
 
 	* dwarf2out.c (gen_inlined_subroutine_die): If block is abstract,
