--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-26  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/debug/debug4.C: New test.
+
 2002-02-25  Kazu Hirata  <kazu@hxi.com>
 
 	* gcc.c-torture/execute/960416-1.x: New.
