--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -2,6 +2,8 @@
 
 	* g++.dg/debug/debug4.C: New test.
 
+	* gcc.dg/ia64-visibility-1.c: New test.
+
 2002-02-26  Alexandre Oliva  <aoliva@redhat.com>
 
 	* gcc.dg/debug/20020224-1.c: New.
