--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2002-02-26  Jakub Jelinek  <jakub@redhat.com>
 
+	* configure.in (libgcc_visibility): Substitute.
+	* configure: Rebuilt.
+	* mklibgcc.in: If libgcc_visibility = yes, make libgcc.a global
+	defined symbols .hidden.
+
+2002-02-26  Jakub Jelinek  <jakub@redhat.com>
+
 	* attribs.c (c_common_attribute_table): Add visibility.
 	(handle_visibility_attribute): New function.
 	* varasm.c (assemble_visibility): New function.
