* configure.in (libgcc_visibility): Substitute. 	* configure: Rebuilt. 	* mklibgcc.in: If libgcc_visibility = yes, make libgcc.a global 	defined symbols .hidden.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50064 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2002-02-26  Jakub Jelinek  <jakub@redhat.com>
 
+	* configure.in (libgcc_visibility): Substitute.
+	* configure: Rebuilt.
+	* mklibgcc.in: If libgcc_visibility = yes, make libgcc.a global
+	defined symbols .hidden.
+
+2002-02-26  Jakub Jelinek  <jakub@redhat.com>
+
 	PR debug/5770
 	* dwarf2out.c (rtl_for_decl_location): Return CONST_STRING for
 	STRING_CST initializer spanning the whole variable without
