* expr.c (expand_expr) [MULT_EXPR]: Do not apply distributive law         in EXPAND_SUM case.  Use host_integerp/tree_low_cst.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50067 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-02-26  Richard Henderson  <rth@redhat.com>
 
+	* expr.c (expand_expr) [MULT_EXPR]: Do not apply distributive law
+	in EXPAND_SUM case.  Use host_integerp/tree_low_cst.
+
+2002-02-26  Richard Henderson  <rth@redhat.com>
+
 	* config/ia64/ia64.c (nop_cycles_until): Do init_insn_group_barriers
 	if we emitted a stop bit.
 
