* pa-linux.h (LIB_SPEC): Update definition. 	* pa32-linux.h (LINK_COMMAND_SPEC): Delete.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50070 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-26  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* pa-linux.h (LIB_SPEC): Update definition.
+	* pa32-linux.h (LINK_COMMAND_SPEC): Delete.
+
 2002-02-26  Alexandre Oliva  <aoliva@redhat.com>
 
 	* dwarf2out.c (gen_inlined_subroutine_die): If block is abstract,
