--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-26  John David Anglin  <dave@hiauly1.hia.nrc.ca>
+
+	* pa-linux.h (LIB_SPEC): Update definition.
+	* pa32-linux.h (LINK_COMMAND_SPEC): Delete.
+
 2002-02-26  Richard Henderson  <rth@redhat.com>
 
 	* config/ia64/ia64.c (nop_cycles_until): Do init_insn_group_barriers
