* config/i386/i386.c (print_operand): Don't append ATT-style         length suffixs to x87 opcodes when in Intel mode.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50074 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,4 +1,9 @@
-2002-02-26  Richard Henderson  <rth@redhat.com>
+2002-02-26  Kelley Cook  <kelleycook@comcast.net>
+
+	* config/i386/i386.c (print_operand): Don't append ATT-style
+	length suffixs to x87 opcodes when in Intel mode.
+
+2002-02-26  Ryan T. Sammartino <ryants@shaw.ca>
 
 	* emit-rtl.c (gen_const_vector_0): Remove TYPE argument.
 	(init_emit_once): Update calls.
