* config/h8300/h8300-protos.h: Update the prototype for 	compute_logical_op_length.  Add the prototype for 	compute_logical_op_cc. 	* config/h8300/h8300.c (compute_logical_op_length): Figure out 	code from operands. 	(compute_logical_op_cc): New. 	* config/h8300/h8300.md: Combine all the logical op patterns 	in HImode and SImode.  Use compute_logical_op_cc.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50078 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -1033,26 +1033,6 @@
   ""
   "")
 
-(define_insn ""
-  [(set (match_operand:HI 0 "register_operand" "=r")
-	(and:HI (match_operand:HI 1 "register_operand" "%0")
-		(match_operand:HI 2 "nonmemory_operand" "rn")))]
-  "TARGET_H8300"
-  "* return output_logical_op (HImode, AND, operands);"
-  [(set (attr "length")
-	(symbol_ref "compute_logical_op_length (HImode, AND, operands)"))
-   (set_attr "cc" "clobber")])
-
-(define_insn ""
-  [(set (match_operand:HI 0 "register_operand" "=r,r")
-	(and:HI (match_operand:HI 1 "register_operand" "%0,0")
-		(match_operand:HI 2 "nonmemory_operand" "r,n")))]
-  "TARGET_H8300H || TARGET_H8300S"
-  "* return output_logical_op (HImode, AND, operands);"
-  [(set (attr "length")
-	(symbol_ref "compute_logical_op_length (HImode, AND, operands)"))
-   (set_attr "cc" "set_znv,clobber")])
-
 (define_insn "*andorhi3"
   [(set (match_operand:HI 0 "register_operand" "=r")
 	(ior:HI (and:HI (match_operand:HI 2 "register_operand" "r")
@@ -1078,26 +1058,6 @@
 		(match_operand:SI 2 "nonmemory_operand" "")))]
   ""
   "")
-
-(define_insn ""
-  [(set (match_operand:SI 0 "register_operand" "=r")
-	(and:SI (match_operand:SI 1 "register_operand" "%0")
-		(match_operand:SI 2 "nonmemory_operand" "rn")))]
-  "TARGET_H8300"
-  "* return output_logical_op (SImode, AND, operands);"
-  [(set (attr "length")
-	(symbol_ref "compute_logical_op_length (SImode, AND, operands)"))
-   (set_attr "cc" "clobber")])
-
-(define_insn ""
-  [(set (match_operand:SI 0 "register_operand" "=r,r")
-	(and:SI (match_operand:SI 1 "register_operand" "%0,0")
-		(match_operand:SI 2 "nonmemory_operand" "r,n")))]
-  "TARGET_H8300H || TARGET_H8300S"
-  "* return output_logical_op (SImode, AND, operands);"
-  [(set (attr "length")
-	(symbol_ref "compute_logical_op_length (SImode, AND, operands)"))
-   (set_attr "cc" "set_znv,clobber")])
 
 ;; ----------------------------------------------------------------------
 ;; OR INSTRUCTIONS
@@ -1145,52 +1105,12 @@
   ""
   "")
 
-(define_insn ""
-  [(set (match_operand:HI 0 "general_operand" "=r,r")
-	(ior:HI (match_operand:HI 1 "general_operand" "%0,0")
-		(match_operand:HI 2 "general_operand" "J,rn")))]
-  "TARGET_H8300"
-  "* return output_logical_op (HImode, IOR, operands);"
-  [(set (attr "length")
-	(symbol_ref "compute_logical_op_length (HImode, IOR, operands)"))
-   (set_attr "cc" "clobber,clobber")])
-
-(define_insn ""
-  [(set (match_operand:HI 0 "general_operand" "=r,r,r")
-	(ior:HI (match_operand:HI 1 "general_operand" "%0,0,0")
-		(match_operand:HI 2 "general_operand" "J,r,n")))]
-  "TARGET_H8300H || TARGET_H8300S"
-  "* return output_logical_op (HImode, IOR, operands);"
-  [(set (attr "length")
-	(symbol_ref "compute_logical_op_length (HImode, IOR, operands)"))
-   (set_attr "cc" "clobber,set_znv,clobber")])
-
 (define_expand "iorsi3"
   [(set (match_operand:SI 0 "register_operand" "")
 	(ior:SI (match_operand:SI 1 "register_operand" "")
 		(match_operand:SI 2 "nonmemory_operand" "")))]
   ""
   "")
-
-(define_insn ""
-  [(set (match_operand:SI 0 "register_operand" "=r,r")
-	(ior:SI (match_operand:SI 1 "register_operand" "%0,0")
-		(match_operand:SI 2 "nonmemory_operand" "J,rn")))]
-  "TARGET_H8300"
-  "* return output_logical_op (SImode, IOR, operands);"
-  [(set (attr "length")
-	(symbol_ref "compute_logical_op_length (SImode, IOR, operands)"))
-   (set_attr "cc" "clobber,clobber")])
-
-(define_insn ""
-  [(set (match_operand:SI 0 "register_operand" "=r,r,r")
-	(ior:SI (match_operand:SI 1 "register_operand" "%0,0,0")
-		(match_operand:SI 2 "nonmemory_operand" "J,r,n")))]
-  "TARGET_H8300H || TARGET_H8300S"
-  "* return output_logical_op (SImode, IOR, operands);"
-  [(set (attr "length")
-	(symbol_ref "compute_logical_op_length (SImode, IOR, operands)"))
-   (set_attr "cc" "clobber,set_znv,clobber")])
 
 ;; ----------------------------------------------------------------------
 ;; XOR INSTRUCTIONS
@@ -1238,26 +1158,6 @@
   ""
   "")
 
-(define_insn ""
-  [(set (match_operand:HI 0 "register_operand" "=r,r")
-	(xor:HI (match_operand:HI 1 "register_operand" "%0,0")
-		(match_operand:HI 2 "nonmemory_operand" "J,rn")))]
-  "TARGET_H8300"
-  "* return output_logical_op (HImode, XOR, operands);"
-  [(set (attr "length")
-	(symbol_ref "compute_logical_op_length (HImode, XOR, operands)"))
-   (set_attr "cc" "clobber,clobber")])
-
-(define_insn ""
-  [(set (match_operand:HI 0 "register_operand" "=r,r,r")
-	(xor:HI (match_operand:HI 1 "register_operand" "%0,0,0")
-		(match_operand:HI 2 "nonmemory_operand" "J,r,n")))]
-  "TARGET_H8300H || TARGET_H8300S"
-  "* return output_logical_op (HImode, XOR, operands);"
-  [(set (attr "length")
-	(symbol_ref "compute_logical_op_length (HImode, XOR, operands)"))
-   (set_attr "cc" "clobber,set_znv,clobber")])
-
 (define_expand "xorsi3"
   [(set (match_operand:SI 0 "register_operand" "")
 	(xor:SI (match_operand:SI 1 "register_operand" "")
@@ -1265,25 +1165,33 @@
   ""
   "")
 
-(define_insn ""
-  [(set (match_operand:SI 0 "register_operand" "=r,r")
-	(xor:SI (match_operand:SI 1 "register_operand" "%0,0")
-		(match_operand:SI 2 "nonmemory_operand" "J,rn")))]
-  "TARGET_H8300"
-  "* return output_logical_op (SImode, XOR, operands);"
-  [(set (attr "length")
-	(symbol_ref "compute_logical_op_length (SImode, XOR, operands)"))
-   (set_attr "cc" "clobber,clobber")])
+;; ----------------------------------------------------------------------
+;; {AND,IOR,XOR}{HI3,SI3} PATTERNS
+;; ----------------------------------------------------------------------
 
 (define_insn ""
-  [(set (match_operand:SI 0 "register_operand" "=r,r,r")
-	(xor:SI (match_operand:SI 1 "register_operand" "%0,0,0")
-		(match_operand:SI 2 "nonmemory_operand" "J,r,n")))]
-  "TARGET_H8300H || TARGET_H8300S"
-  "* return output_logical_op (SImode, XOR, operands);"
+  [(set (match_operand:HI 0 "register_operand" "=r")
+	(match_operator:HI 3 "bit_operator"
+	  [(match_operand:HI 1 "register_operand" "%0")
+	   (match_operand:HI 2 "nonmemory_operand" "rn")]))]
+  ""
+  "* return output_logical_op (HImode, operands);"
   [(set (attr "length")
-	(symbol_ref "compute_logical_op_length (SImode, XOR, operands)"))
-   (set_attr "cc" "clobber,set_znv,clobber")])
+	(symbol_ref "compute_logical_op_length (HImode, operands)"))
+   (set (attr "cc")
+	(symbol_ref "compute_logical_op_cc (HImode, operands)"))])
+
+(define_insn ""
+  [(set (match_operand:SI 0 "register_operand" "=r")
+	(match_operator:SI 3 "bit_operator"
+	  [(match_operand:SI 1 "register_operand" "%0")
+	   (match_operand:SI 2 "nonmemory_operand" "rn")]))]
+  ""
+  "* return output_logical_op (SImode, operands);"
+  [(set (attr "length")
+	(symbol_ref "compute_logical_op_length (SImode, operands)"))
+   (set (attr "cc")
+	(symbol_ref "compute_logical_op_cc (SImode, operands)"))])
 
 ;; ----------------------------------------------------------------------
 ;; NEGATION INSTRUCTIONS
