--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-26  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.c (alpha_encode_section_info): Examine
+	MODULE_LOCAL_P; improve commentary.
+
 2002-02-26  Zack Weinberg  <zack@codesourcery.com>
 
 	* doc/cpp.texi: Clarify documentation of relationship between
