--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-26  Richard Henderson  <rth@redhat.com>
 
+	* config/alpha/alpha.md (ashldi_se): Re-enable.
+
+2002-02-26  Richard Henderson  <rth@redhat.com>
+
 	* config/alpha/alpha.c (alpha_encode_section_info): Examine
 	MODULE_LOCAL_P; improve commentary.
 
