--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-26  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.md (ashldi_se): Re-enable.
+
 2002-02-26  Kelley Cook  <kelleycook@comcast.net>
 
 	* config/i386/i386.c (print_operand): Don't append ATT-style
