--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-27  Michael Meissner  <meissner@redhat.com>
+
+	* gcc.c-torture/execute/20020226-1.c: New test.
+
 2002-02-26  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/debug/debug4.C: New test.
