--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,17 @@
+2002-02-26  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/rs6000/aix43.h (THREAD_MODEL_SPEC): Delete.
+	* config/rs6000/aix51.h (THREAD_MODEL_SPEC): Delete.
+	* config/rs6000/rs6000.c (rs6000_return_addr): Use efficient
+	method on AIX.
+	* config/rs6000/rs6000.md (movsi_low): Use gpc_reg_operand.
+	(movsi_low_st, movdf_low, movdf_low_st, movsf_low, movsf_low_st): Same.
+	(load_toc_v4_PIC_2): Same.
+
+2002-02-26  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/rs6000.md (load_toc_aix_di): Handle TARGET_RELOCATABLE.
+
 2002-02-26  Richard Henderson  <rth@redhat.com>
 
 	* config/alpha/alpha.md (ashldi_se): Re-enable.
